imgui dependencies cmake flag changes

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -17,4 +17,5 @@ set(IMGUI_IMPL_DX10 OFF)
 set(IMGUI_IMPL_DX11 OFF)
 set(IMGUI_IMPL_DX12 OFF)
 set(IMGUI_IMPL_VULKAN OFF)
+set(IMGUI_IMPL_OPENGL2 OFF)
 add_subdirectory(imgui-1.90.6-docking)
