update for use as a submodule

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -1,13 +1,14 @@
+#MESSAGE(STATUS "Searching ImGuiApp dependencies in: ${CMAKE_CURRENT_LIST_DIR}")
 # Include GLM 
-add_subdirectory(glm-1.0.1-light/glm) 
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glm-1.0.1-light/glm) 
 
 # Include GLEW into build. 
 set(OpenGL_GL_PREFERENCE LEGACY) 
-add_subdirectory(glew-2.1.0/build/cmake) 
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glew-2.1.0/build/cmake) 
 
 # Include GLFW into build.
 set(GLFW_BUILD_EXAMPLES OFF)
-add_subdirectory(glfw-3.4)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glfw-3.4)
 
 # Include Dear ImGui into build.
 set(IMGUI_EXAMPLES OFF)
@@ -20,4 +21,4 @@ set(IMGUI_IMPL_DX11 OFF)
 set(IMGUI_IMPL_DX12 OFF)
 set(IMGUI_IMPL_VULKAN OFF)
 set(IMGUI_IMPL_OPENGL2 OFF)
-add_subdirectory(imgui-1.90.6-docking)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/imgui-1.90.6-docking)
