--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -28,3 +28,6 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/imgui-1.90.6-docking)
 #add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/spdlog-1.14.1)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/spdlog)
 
+# Include pbPlots into build. 
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/pbPlots)
+
