--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,12 @@ file(GLOB ImGuiApp_SOURCE "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
 
 add_library(ImGuiApp STATIC ${ImGuiApp_SOURCE})
 
-target_link_libraries(ImGuiApp PUBLIC spdlog glm glew glfw imgui imgui-glfw imgui-opengl3 pbPlots)
+target_link_libraries(ImGuiApp PUBLIC spdlog glm glew glfw imgui imgui-glfw imgui-opengl3)
 
 target_include_directories(
     ImGuiApp PUBLIC 
     ${CMAKE_CURRENT_LIST_DIR}/dependencies/glew-2.1.0/include
     ${CMAKE_CURRENT_LIST_DIR}/dependencies/glm-1.0.1-light 
-    ${CMAKE_CURRENT_LIST_DIR}/dependencies/pbPlots/pbPlots/Cpp
     ${CMAKE_CURRENT_LIST_DIR}/include
 ) 
 
