--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/spdlog/spdlog"]
 	path = dependencies/spdlog/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "vcpkg"]
+	path = vcpkg
+	url = https://github.com/microsoft/vcpkg.git
